--- a/themes/yinwang/layout/_partial/article.ejs
+++ b/themes/yinwang/layout/_partial/article.ejs
@@ -1,6 +1,6 @@
 <% if (post && index){ %>
 <li class="list-group-item title">
-    <a target="_blank" href="<%- url_for(post.path)%>"><%= post.title%></a>
+    <a href="<%- url_for(post.path)%>"><%= post.title%></a>
 </li>
 <% } else { %>
 <h2 class="title"><%= post.title%></h2>
