--- a/themes/yinwang/layout/_partial/head.ejs
+++ b/themes/yinwang/layout/_partial/head.ejs
@@ -36,5 +36,15 @@
 
 	</script>
 	<% } %>
+    <script>
+    var _hmt = _hmt || [];
+    (function() {
+      var hm = document.createElement("script");
+      hm.src = "//hm.baidu.com/hm.js?de4f32001a5147708e87456adf5acab4";
+      var s = document.getElementsByTagName("script")[0]; 
+      s.parentNode.insertBefore(hm, s);
+    })();
+    </script>
+
 <%- autoCanonical(config, page) %>
 </head>
