--- a/themes/yinwang/source/css/_common/components/common.styl
+++ b/themes/yinwang/source/css/_common/components/common.styl
@@ -120,3 +120,9 @@ table tr.alt td {
 }
 table tr:nth-child(odd){background:#F4F4F4;}
 table td:nth-child(even){}
+
+.copyright {
+	line_height: 100%;
+	font-size: 16px;
+	border: 1px solid LightGrey;
+}
