--- a/themes/yinwang/layout/_partial/afterfooter.ejs
+++ b/themes/yinwang/layout/_partial/afterfooter.ejs
@@ -1,5 +1,26 @@
+<% if(is_home()) { %>
 <script src="/js/jquery-2.1.1.min.js"></script>
 <script src="/js/bootstrap.min.js"></script>
+<% } %>
+<% if (page.comments){ %>
+<% if (config.duoshuo_shortname){ %>
+<!-- 多说评论框 start -->
+     <div class="ds-thread" data-thread-key="<%= page.abbrlink%>" data-title="<%= page.title%>" data-url="<%= page.permalink%>"></div>
+<!-- 多说评论框 end -->
+<!-- 多说公共JS代码 start (一个网页只需插入一次) -->
+<script type="text/javascript">
+var duoshuoQuery = {short_name:"<%= config.duoshuo_shortname%>"};
+    (function() {
+    		var ds = document.createElement('script');
+		    ds.type = 'text/javascript';ds.async = true;
+		    	    ds.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//static.duoshuo.com/embed.js';
+			    	   ds.charset = 'UTF-8';
+				   	      (document.getElementsByTagName('head')[0]
+					      						 || document.getElementsByTagName('body')[0]).appendChild(ds);
+											 })();
+											 </script>
+<!-- 多说公共JS代码 end -->
+<% } %>
 <% if (config.disqus_shortname){ %>
     <script type="text/javascript">
     var disqus_shortname = '<%= config.disqus_shortname %>';
@@ -13,4 +34,4 @@
     }());
     </script>
 <% } %>
-
+<% } %>
