--- a/themes/yinwang/source/css/_common/components/common.styl
+++ b/themes/yinwang/source/css/_common/components/common.styl
@@ -124,5 +124,6 @@ table td:nth-child(even){}
 .copyright {
 	line_height: 100%;
 	font-size: 16px;
-	border: 1px solid LightGrey;
+	background-color: grey;
+	border: 2px solid LightGrey;
 }
