--- a/themes/yinwang/layout/_partial/article.ejs
+++ b/themes/yinwang/layout/_partial/article.ejs
@@ -20,12 +20,12 @@
 <% if (copyright) { %>
 <br/>
 <div class="copyright">
-           <p><span>本文标题: </span><a href="<%- url_for(post.path)%>"><%= post.title%></a></p>
-           <p><span>文章作者: </span><a href="/" title="访问 <%= theme.author%>  的个人博客"><%= theme.author%> </a></p>
-           <p><span>发布时间: </span><%= post.date.format("YYYY年M月D日 - HH时mm分") %></p>
-           <p><span>原始链接: </span><a href="<%- url_for(post.path)%> " title="<%= post.title%> "><%= post.permalink%></a></p>
-           <p><span>许可协议: </span><i class="fa fa-creative-commons"></i> <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/" title="Attribution-NonCommercial 4.0 International (CC BY-NC 4.0)">"Attribution-NonCommercial 4.0"</a></p>
-           <p><span> 转载请保留以上信息 </span></p>
+           <p><span>本文标题: </span><a href="<%- url_for(post.path)%>"><%= post.title%></a>
+           <br/><span>文章作者: </span><a href="/" title="访问 <%= theme.author%>  的个人博客"><%= theme.author%> </a>
+           <br/><span>发布时间: </span><%= post.date.format("YYYY年M月D日 - HH时mm分") %>
+           <br/><span>原始链接: </span><a href="<%- url_for(post.path)%> " title="<%= post.title%> "><%= post.permalink%></a>
+           <br/><span>许可协议: </span><a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="知识共享许可协议" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/4.0/80x15.png" /></a>
+           <br/><span> 转载请保留以上信息 </span></p>
         </div>
 <% } %>
 <% } %>
