--- a/themes/yinwang/source/css/_common/components/common.styl
+++ b/themes/yinwang/source/css/_common/components/common.styl
@@ -128,6 +128,10 @@ table td:nth-child(even){}
 	border: 2px solid LightGrey;
 }
 
+p .copyright {
+	margin: 0;
+}
+
 .reset-this {
     animation : none;
     animation-delay : 0;
