--- a/themes/yinwang/source/css/_common/components/common.styl
+++ b/themes/yinwang/source/css/_common/components/common.styl
@@ -124,12 +124,12 @@ table td:nth-child(even){}
 .copyright {
 	line_height: 100%;
 	font-size: 16px;
-	background-color: grey;
-	border: 2px solid LightGrey;
+	background-color: LightGrey;
 }
 
-p .samll {
+p .small {
 	margin: 0;
+	padding: 0;
 }
 
 .reset-this {
