--- a/themes/yinwang/source/css/_common/components/common.styl
+++ b/themes/yinwang/source/css/_common/components/common.styl
@@ -122,14 +122,10 @@ table tr:nth-child(odd){background:#F4F4F4;}
 table td:nth-child(even){}
 
 .copyright {
-	line_height: 100%;
+	line-height: 100%;
 	font-size: 16px;
 	background-color: LightGrey;
-}
-
-p .small {
-	margin: 0;
-	padding: 0;
+	border: 1px solid Black;
 }
 
 .reset-this {
