--- a/themes/yinwang/layout/_partial/article.ejs
+++ b/themes/yinwang/layout/_partial/article.ejs
@@ -20,12 +20,12 @@
 <% if (copyright) { %>
 <br/>
 <div class="copyright">
-           <p class="small"><span>本文标题: </span><a href="<%- url_for(post.path)%>"><%= post.title%></a></p>
-           <p class="small"><span>文章作者: </span><a href="/" title="访问 <%= theme.author%>  的个人博客"><%= theme.author%> </a></p>
-           <p class="small"><span>发布时间: </span><%= post.date.format("YYYY年M月D日 - HH时mm分") %></p>
-           <p class="small"><span>原始链接: </span><a href="<%- url_for(post.path)%> " title="<%= post.title%> "><%= post.permalink%></a></p>
-           <p class="small"><span>许可协议: </span><a class="reset-this" rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img class="reset-this" alt="知识共享许可协议" src="https://i.creativecommons.org/l/by-nc/4.0/80x15.png" /></a></p>
-           <p class="small"><span> 转载请保留以上信息 </span></p>
+           <p><span>本文标题: </span><a href="<%- url_for(post.path)%>"><%= post.title%></a></p>
+           <p><span>文章作者: </span><a href="/" title="访问 <%= theme.author%>  的个人博客"><%= theme.author%> </a></p>
+           <p><span>发布时间: </span><%= post.date.format("YYYY年M月D日 - HH时mm分") %></p>
+           <p><span>原始链接: </span><a href="<%- url_for(post.path)%> " title="<%= post.title%> "><%= post.permalink%></a></p>
+           <p><span>许可协议: </span><a class="reset-this" rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img class="reset-this" alt="知识共享许可协议" src="https://i.creativecommons.org/l/by-nc/4.0/80x15.png" /></a></p>
+           <p><span> 转载请保留以上信息 </span></p>
         </div>
 <% } %>
 <% } %>
