update indigo theme.

--- a/themes/indigo/layout/_partial/after-footer.ejs
+++ b/themes/indigo/layout/_partial/after-footer.ejs
@@ -1,13 +1,12 @@
 <div class="mask" id="mask"></div>
 <a href="javascript:;" id="gotop" class="waves-effect waves-circle waves-light"><span class="icon icon-lg icon-chevron-up"></span></a>
 <% if(theme.share){ %>
-<script>
-var BLOG_SHARE = {
-    title: "<%-(page.title || config.title) %>",
-    pic: "<%=theme.avatar %>",
-    summary: document.getElementsByName('summary')[0].content,
-    url: "<%=url.replace(/index\.html$/, '') %>"
-};
+<script>var BLOG = { ROOT: '<%= config.root %>' };
+BLOG.SHARE = {
+title: "<%-(page.title || config.title) %>",
+pic: "<%=theme.avatar %>",
+summary: document.getElementsByName('summary')[0].content,
+url: "<%=url.replace(/index\.html$/, '') %>" }
 </script>
 <%- partial('post/share', {className: 'global-share'}) %>
 <% } %>
