--- a/themes/indigo/layout/tag.ejs
+++ b/themes/indigo/layout/tag.ejs
@@ -1,4 +1,3 @@
 <%- partial('tags', {
-    pagination: config.archive,
-    title: theme.menu.tags.text + ': '+ _.capitalize(page.tag)
+    title: theme.tags_title + ': '+ _.capitalize(page.tag)
 }) %>
