--- a/themes/indigo/layout/archive.ejs
+++ b/themes/indigo/layout/archive.ejs
@@ -1,18 +1,18 @@
 <%- partial('_partial/header', {
-    title: theme.menu.archives.text,
+    title: theme.archives_title,
     hdClass: 'archives-header'
 }) %>
 <div class="container body-wrap">
     <%
         var posts = [];
-
+        
         page.posts.each(function(post){
             posts.push(post);
         });
 
         var sortPosts = _[_.orderBy ? 'orderBy' : 'sortByOrder'](posts, ['date'], ['desc']);
     %>
-
+    
     <%
     var y = 0, m = 0;
     sortPosts.forEach(function(post, i){
@@ -31,7 +31,7 @@
     <%    } %>
 
         <%- partial('_partial/archive', {post: post, date_format: 'MMM D'}) %>
-
+            
     <%})%>
     </div>
 
