--- a/themes/indigo/layout/category.ejs
+++ b/themes/indigo/layout/category.ejs
@@ -1,4 +1,3 @@
 <%- partial('categories', {
-    pagination: config.archive,
-    title: theme.menu.list.text + ': '+ _.capitalize(page.category)
+    title: theme.categories_title + ': '+ _.capitalize(page.category)
 }) %>
