--- a/themes/indigo/layout/tags.ejs
+++ b/themes/indigo/layout/tags.ejs
@@ -1,9 +1,9 @@
 <%- partial('_partial/header', {
-    title: locals.title || theme.menu.tags.text,
+    title: locals.title || theme.tags_title,
     hdClass: 'tags-header'
 }) %>
 <div class="container body-wrap">
-    <%
+    <% 
         if(is_tag()) { %>
             <div class="waterfall">
           <% page.posts.each(function(post){ %>
@@ -16,16 +16,16 @@
             site.tags.each(function(tag){  %>
 
             <h3 class="archive-separator" id="tag-<%=tag.name %>"><%=tag.name %></h3>
-
+            
             <div class="waterfall">
-            <% tag.posts.each(function(post){  %>
+            <% tag.posts.each(function(post){  %> 
 
                 <%- partial('_partial/archive', {post: post, date_format: 'MMM D, YYYY'}) %>
 
             <% }) %>
             </div>
         <% })
-        }
+        } 
     %>
-	<%- partial('_partial/paginator') %>
+    <%- partial('_partial/paginator') %>
 </div>
