change img style

--- a/themes/indigo-card/source/css/_partial/page.less
+++ b/themes/indigo-card/source/css/_partial/page.less
@@ -32,10 +32,16 @@
     }
 
     img {
-        width: 100%;
-        padding: 0;
-        margin: 0;
-        border: none;
+        height: auto;
+        width: auto\9; /* ie8 */
+        display: block;
+        box-shadow: 0 0 10px #555;
+        border-radius: 6px;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 10px;
+        margin-bottom: 10px;
+        -webkit-box-shadow: 0 0 10px #555;
     }
 
     figure,
