--- a/themes/indigo-card/source/css/_partial/article.less
+++ b/themes/indigo-card/source/css/_partial/article.less
@@ -319,10 +319,16 @@
     }
 
     img {
+        height: auto;
+        width: auto\9; /* ie8 */
         display: block;
-        margin: 40px auto;
-        padding: 8px;
-        border: 1px solid #efefef
+        box-shadow: 0 0 10px #555;
+        border-radius: 6px;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 10px;
+        margin-bottom: 10px;
+        -webkit-box-shadow: 0 0 10px #555;
     }
 
     blockquote {
