--- a/themes/indigo/layout/_partial/menu.ejs
+++ b/themes/indigo/layout/_partial/menu.ejs
@@ -5,7 +5,9 @@
     </a>
     <div class="brand-wrap">
       <div class="brand">
-        <a href="/" class="avatar waves-effect waves-circle waves-light"><img src="<%=theme.avatar %>"></a>
+        <a href="<%- config.root %>" class="avatar waves-effect waves-circle waves-light">
+          <img src="<%- url_for(theme.avatar) %>">
+        </a>
         <hgroup class="introduce">
           <h5 class="nickname"><%- config.author %></h5>
           <%- mail_to(theme.email, theme.email, {class: 'mail'}) %>
