--- a/themes/indigo/layout/_partial/post.ejs
+++ b/themes/indigo/layout/_partial/post.ejs
@@ -1,12 +1,12 @@
 <%- partial('post/toc', { post: post}) %>
 <article id="<%= post.layout %>-<%= post.slug %>"
-  class="post-article article-type-<%= post.layout %>" itemprop="blogPost">
+  class="post-article article-type-<%= post.layout %> fade" itemprop="blogPost">
 
     <div class="post-card">
         <h1 class="post-card-title"><%- post.title %></h1>
         <div class="post-meta">
             <%- partial('post/date', {date_format: config.date_format}) %>
-			<%- partial('post/comment-count', {isPost: true}) %>
+            <%- partial('post/comment-count', {isPost: true}) %>
             <%- partial('post/category') %>
         </div>
         <div class="post-content" id="post-content" itemprop="postContent">
@@ -18,11 +18,14 @@
 
         <div class="post-footer">
             <%- partial('post/tag') %>
+
             <%- partial('post/share-fab') %>
+
         </div>
     </div>
 
     <%- partial('post/nav') %>
+
     <%- partial('post/comment') %>
 </article>
 <%- partial('post/reward') %>
