--- a/themes/indigo/layout/_partial/post/copyright.ejs
+++ b/themes/indigo/layout/_partial/post/copyright.ejs
@@ -4,7 +4,7 @@
     </div>
     <footer>
         <a href="<%- config.url %>">
-            <img src="<%- theme.avatar %>" alt="<%- config.author %>">
+            <img src="<%- url_for(theme.avatar) %>" alt="<%- config.author %>">
             <%- config.author %>
         </a>
     </footer>
