--- a/themes/indigo/source/css/_partial/postlist.less
+++ b/themes/indigo/source/css/_partial/postlist.less
@@ -6,7 +6,7 @@
 
 .post-list-item {
     padding: 0 12px;
-    margin-bottom: 24px;
+    margin-bottom: 30px;
 }
 
 .post-time {
@@ -94,8 +94,10 @@
     padding: 0px 16px;
     line-height: 28px;
     color: rgba(255, 255, 255, 0.8);
+    .transition(.2s);
     &:hover {
-        color: #fff
+        color: #fff;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, .26);
     }
 }
 
