--- a/themes/indigo/layout/tags.ejs
+++ b/themes/indigo/layout/tags.ejs
@@ -2,8 +2,8 @@
     title: locals.title || theme.tags_title,
     hdClass: 'tags-header'
 }) %>
-<div class="container body-wrap">
-    <% 
+<div class="container body-wrap fade">
+    <%
         if(is_tag()) { %>
             <div class="waterfall">
           <% page.posts.each(function(post){ %>
@@ -16,16 +16,16 @@
             site.tags.each(function(tag){  %>
 
             <h3 class="archive-separator" id="tag-<%=tag.name %>"><%=tag.name %></h3>
-            
+
             <div class="waterfall">
-            <% tag.posts.each(function(post){  %> 
+            <% tag.posts.each(function(post){  %>
 
                 <%- partial('_partial/archive', {post: post, date_format: 'MMM D, YYYY'}) %>
 
             <% }) %>
             </div>
         <% })
-        } 
+        }
     %>
     <%- partial('_partial/paginator') %>
 </div>
