--- a/themes/indigo/source/css/_partial/article.less
+++ b/themes/indigo/source/css/_partial/article.less
@@ -12,10 +12,11 @@
 
 .post-toc-wrap {
     position: fixed;
+    overflow-x: hidden;
+    width: 20%;
     &.fixed {
         top: @headerH + 20px;
         bottom: 20px;
-        overflow-x: hidden;
         overflow-y: auto;
     }
 
@@ -35,47 +36,56 @@
     padding-left: 10px;
 }
 .post-toc {
-    position: relative;
     display: inline-block;
     padding: 0;
     font-size: 13px;
+    > .post-toc-item {
+        position: relative
+    }
 }
 .post-toc-item {
     font-weight: 400;
     color: @secondaryTextColor;
 
-    &:before {
-        content: '';
-        position: absolute;
-        left: 0;
-        z-index: 1;
-        height: 25px;
-        width: 100%;
-    }
-
     &.active {
-        color: @primaryColor;
 
-        &:before {
-            border-left: 3px solid @primaryColor;
-            background: rgba(0, 0, 0, .06);
+        > .post-toc-link {
+            font-weight: 600;
+            color: @primaryColor;
+            &:before {
+                background: rgba(0, 0, 0, .06);
+            }
+
+            &:after {
+                border-left: 3px solid @primaryColor;
+            }
         }
-
     }
 }
 .post-toc-link {
     position: relative;
     z-index: 2;
     display: block;
-    max-width: 20vw;
     padding: 3px 20px;
     line-height: 1.5rem;
     color: inherit;
-    .ellipsis;
+    word-break: break-all;
 
     &:hover {
         opacity: .8;
     }
+
+    &:before,
+    &:after {
+        content: '';
+        position: absolute;
+        z-index: 1;
+        top: 0;
+        right: 0;
+        width: 100%;
+        height: 100%;
+    }
+
 }
 
 
@@ -91,7 +101,7 @@
     padding: 35px;
     background: #fff;
     border-radius: 4px;
-    box-shadow: 0 0 30px rgba(0, 0, 0, .3);
+    box-shadow: 0 10px 30px rgba(0, 0, 0, .2);
     .post-meta {
         margin-top: 8px;
     }
@@ -184,10 +194,26 @@
     line-height: 1.8;
 
     .highlight,
+    .image-bubble,
     > pre {
         margin-left: -35px;
         margin-right: -35px;
+    }
+
+    .highlight,
+    > pre {
         padding: 20px 35px;
+    }
+
+    .image-bubble {
+        margin-top: 20px;
+        margin-bottom: 20px;
+        text-align: center;
+    }
+    .image-caption {
+        display: inline-block;
+        margin-top: 10px;
+        color: @secondaryTextColor;
     }
 
     .headerlink {
@@ -303,7 +329,8 @@
     p:first-child,
     pre:first-child,
     table:first-child,
-    ul:first-child {
+    ul:first-child,
+    figure:first-child {
         margin-top: 0
     }
 
@@ -318,18 +345,6 @@
         max-width: 100%;
     }
 
-    img {
-        height: auto;
-        width: auto\9; /* ie8 */
-        display: block;
-        box-shadow: 0 0 10px #555;
-        border-radius: 6px;
-        margin-left: auto;
-        margin-right: auto;
-        margin-top: 10px;
-        margin-bottom: 10px;
-        -webkit-box-shadow: 0 0 10px #555;
-    }
 
     blockquote {
         position: relative;
@@ -490,18 +505,29 @@
     }
 
     .has-jax {
-	font-size: 13px;
+        font-size: 13px;
     }
-
     .MJXc-display {
-	overflow-x: auto;
-	overflow-y: hidden;
+        overflow-x: auto;
+        overflow-y: hidden;
     }
 }
 
 @media screen and (max-width:480px) {
     .has-jax {
         font-size: 10px;
+    }
+    .post-content {
+        .highlight,
+        .image-bubble,
+        > pre {
+            margin-left: -16px;
+            margin-right: -16px;
+        }
+        .highlight,
+        > pre {
+            padding: 16px;
+        }
     }
 }
 
