--- a/themes/indigo/source/css/style.less
+++ b/themes/indigo/source/css/style.less
@@ -10,31 +10,39 @@
 }
 
 ::-webkit-scrollbar {
-    width: 5px;
-    height: 5px;
+    -webkit-appearance: none;
+    width: 8px;
+    height: 8px;
 
-    &-track { background-color: transparent; }
+    &-track { background-color: inherit; }
     &-thumb {
-        background-color: @dividerColor ;
-
+        background-color: @dividerColor;
+        border: 1px solid #fff;
+        border-radius: 10px;
         &:hover {
-            background-color: @secondaryTextColor
+            background-color: darken(@dividerColor, 10%)
         }
         &:active {
-            background-color: @secondaryTextColor
+            background-color: darken(@dividerColor, 20%)
         }
     }
 }
 
+::selection {
+    background: lighten(@lightPrimaryColor, 5%);
+}
+
 html {
-    background-color: #fff;
+    background-color: @backColor;
     color: @primaryTextColor;
     font-size: @font-size;
     line-height: 1.5;
+    overflow-x: hidden;
 }
 
 body {
     -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
+    -webkit-overflow-scrolling: touch;
 }
 
 html,
@@ -43,8 +51,10 @@ body {
     min-height: 100%;
     height: 100%;
 }
-html.lock {
+
+.lock {
     overflow: hidden;
+    max-height: 100%;
 }
 
 body,
@@ -390,4 +400,5 @@ hr,
 @import '_partial/tags';
 @import '_partial/search';
 @import '_partial/reward';
+@import '_partial/lightbox';
 @import '_duoshuo/embed';
