--- a/themes/indigo/source/css/style.less
+++ b/themes/indigo/source/css/style.less
@@ -130,6 +130,13 @@ small {
     line-height: 1;
 }
 
+main {
+    display: block
+}
+template {
+    display: none
+}
+
 img {
     max-width: 100%;
     border: none;
