--- a/themes/indigo/source/css/_partial/lightbox.less
+++ b/themes/indigo/source/css/_partial/lightbox.less
@@ -1,59 +1,67 @@
 .img-lightbox {
     text-align: center;
-    .aspect-ratio {
+    &.ready {
         position: relative;
+        top: 0;
+        left: 0;
+        img {
+            position: absolute;
+            z-index: 890;
+            &.zoom-in {
+                .transition(.3s);
+            }
+        }
+        .overlay {
+            position: fixed;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            z-index: 888;
+            background: #2f2d2d;
+            opacity: 0;
+            will-change: opacity;
+            .transition(.3s);
+        }
+
+        .overlay-title {
+            position: fixed;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            z-index: 900;
+            height: 40px;
+            line-height: 40px;
+            color: #fff;
+            opacity: 0;
+            .transform(translate3d(0, 30px, 0));
+            .transition(.3s);
+        }
+    }
+
+    &.active {
+        img {
+            cursor: -webkit-zoom-out;
+            cursor: zoom-out;
+        }
+        .overlay,
+        .overlay-title {
+            opacity: 1
+        }
+        .overlay-title {
+            .transform(translate3d(0, 0, 0));
+        }
     }
 
     img {
         display: inline;
         margin: 0;
-        cursor: pointer;
         cursor: -webkit-zoom-in;
-        &.zoom-img {
-            cursor: -webkit-zoom-out;
+        cursor: zoom-in;
+
+        &:hover {
+            will-change: left, top, width, height;
         }
     }
-
-    .zoom-img,
-    .zoom-img-wrap {
-        position: relative;
-        z-index: 889;
-        .transition(.3s)
-    }
-    .zoom-img-wrap.abs {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-    }
-
-    .zoom-overlay {
-        position: fixed;
-        z-index: 888;
-        background: rgba(0, 0, 0, .6);
-        opacity: 0;
-        cursor: pointer;
-        cursor: -webkit-zoom-out;
-        .transition(.3s);
-        &.show {
-            opacity: 1;
-            + .zoom-img-title {
-                opacity: 1;
-            }
-        }
-    }
-
-    .zoom-img-title {
-        position: fixed;
-        z-index: 900;
-        height: 30px;
-        line-height: 30px;
-        color: #fff;
-        background: rgba(0, 0, 0, .3);
-        opacity: 0;
-        .transition(.3s);
-    }
-
 }
 
