--- a/themes/indigo/layout/_partial/post/copyright.ejs
+++ b/themes/indigo/layout/_partial/post/copyright.ejs
@@ -1,5 +1,6 @@
 <blockquote class="post-copyright">
     <div class="content">
+        <%- partial('updated') %>
         <%- _.template(theme.copyright)(locals) %>
     </div>
     <footer>
