--- a/themes/indigo/source/css/_partial/article.less
+++ b/themes/indigo/source/css/_partial/article.less
@@ -16,7 +16,7 @@
     width: 20%;
     &.fixed {
         top: @headerH + 20px;
-        bottom: 20px;
+        bottom: 140px;
         overflow-y: auto;
     }
 
@@ -531,6 +531,6 @@
     }
 }
 
-.duoshuo {
-    padding: 40px 0;
+.comments {
+    padding: 60px 0 0;
 }
