--- a/themes/indigo/layout/_partial/index-item.ejs
+++ b/themes/indigo/layout/_partial/index-item.ejs
@@ -4,11 +4,12 @@
     <div class="post-meta">
         <%- partial('post/date', {date_format: config.date_format}) %>
         <%- partial('post/category') %>
+        <%- partial('plugins/duoshuo-count') %>
     </div>
 
     <%- partial('post/title', { hasLink: true }) %>
 
-    <div class="post-content" id="post-content" itemprop="postContent" >
+    <div class="post-content" id="post-content" itemprop="postContent">
 
     <% if(theme.excerpt_render) { %>
         <%- post.excerpt || post.content %>
@@ -21,8 +22,6 @@
         <a href="<%- url_for(post.path) %>" class="post-more waves-effect waves-button">
             <%-theme.excerpt_link%>
         </a>
-        
-        <%- partial('post/comment-count', {post: post, isPost: false}) %>
     </div>
     <% if(post.tags && post.tags.length){ %>
     <div class="post-footer">
