--- a/themes/indigo/layout/_partial/post.ejs
+++ b/themes/indigo/layout/_partial/post.ejs
@@ -6,8 +6,9 @@
         <h1 class="post-card-title"><%- post.title %></h1>
         <div class="post-meta">
             <%- partial('post/date', {date_format: config.date_format}) %>
-            <%- partial('post/comment-count', {isPost: true}) %>
             <%- partial('post/category') %>
+            <%- partial('plugins/page-visit') %>
+            <%- partial('plugins/duoshuo-count') %>
         </div>
         <div class="post-content" id="post-content" itemprop="postContent">
             <%- post.content %>
