--- a/themes/indigo/layout/_partial/script.ejs
+++ b/themes/indigo/layout/_partial/script.ejs
@@ -1,25 +1,20 @@
 <script src="//cdn.bootcss.com/node-waves/0.7.4/waves.min.js"></script>
-<script src="<%= url_for('/js/main' + (cache ? '.min': '') + '.js?v=' + theme_version()) %>"></script>
+<script>
+var BLOG = { ROOT: '<%= config.root %>', SHARE: <%- theme.share %>, REWARD: <%- Boolean(page.reward) %> };
+<%- partial('plugins/duoshuo-js') %>
+<% if (theme.cnzz){ %>
+lazyScripts.push('//s95.cnzz.com/z_stat.php?id=<%-theme.cnzz %>&web_id=<%-theme.cnzz %>')
+<% } %>
+</script>
 
+<script src="<%- url_for('/js/main' + (cache ? '.min': '') + '.js?v=' + theme_version()) %>"></script>
 <% if (theme.search){ %>
 <%- partial('search') %>
-<script src="<%= url_for('/js/search' + (cache ? '.min': '') + '.js?v=' + theme_version()) %>"></script>
+<script src="<%- url_for('/js/search' + (cache ? '.min': '') + '.js?v=' + theme_version()) %>" async></script>
 <% } %>
 
-<% if (theme.mathjax){ %>
-<%- partial('mathjax') %>
+<%- partial('plugins/mathjax') %>
+
+<% if (theme.visit_counter) { %>
+<script async src="//dn-lbstatics.qbox.me/busuanzi/2.3/busuanzi.pure.mini.js"></script>
 <% } %>
-
-<% if (theme.cnzz){ %>
-<script src="//s95.cnzz.com/z_stat.php?id=<%=theme.cnzz %>&web_id=<%=theme.cnzz %>"></script>
-<% } %>
-
-<% if (theme.duoshuo){ %>		
-  <script src="<%= url_for('/js/embed' + (cache ? '.min': '') + '.js?v=' + theme.version) %>"></script>		
-  <script src="//cdn.bootcss.com/marked/0.3.6/marked.min.js" async="async"></script>		
-  <script>		
-  var duoshuoQuery = {short_name:'<%=theme.duoshuo %>', theme: 'none'}		
-  </script>		
-<%}%>
-
-<%- partial('google-analytics') %>
