--- a/themes/indigo/layout/_partial/head.ejs
+++ b/themes/indigo/layout/_partial/head.ejs
@@ -1,5 +1,6 @@
 <head>
     <%- partial('plugins/google-analytics') %>
+    <%- partial('plugins/google-adsense') %>
     <%- partial('plugins/smartlook') %>
     <%- partial('plugins/tajs') %>
     <%- partial('plugins/baidu') %>
