--- a/themes/indigo/layout/_partial/post.ejs
+++ b/themes/indigo/layout/_partial/post.ejs
@@ -13,7 +13,7 @@
         <div class="post-content" id="post-content" itemprop="postContent">
             <%- post.content %>
         </div>
-
+        <%- partial('plugins/google-adsense-fix-autosize') %>
         <%- partial('post/copyright') %>
         <%- partial('post/reward-btn') %>
 
