--- a/themes/indigo/layout/layout.ejs
+++ b/themes/indigo/layout/layout.ejs
@@ -10,5 +10,6 @@
     </main>
     <%- partial('_partial/after-footer') %>
     <%- partial('_partial/script') %>
+    <%- partial('_partial/plugins/infolinks') %>
 </body>
 </html>
