--- a/themes/indigo/layout/_partial/post.ejs
+++ b/themes/indigo/layout/_partial/post.ejs
@@ -11,6 +11,7 @@
             <%- partial('plugins/duoshuo-count') %>
         </div>
         <div class="post-content" id="post-content" itemprop="postContent">
+            <script async type="text/javascript" src="//cdn.carbonads.com/carbon.js?serve=CE7DP27M&placement=abnerchoume" id="_carbonads_js"></script>
             <%- post.content %>
         </div>
         <%- partial('post/copyright') %>
