--- a/themes/indigo/source/css/style.less
+++ b/themes/indigo/source/css/style.less
@@ -408,4 +408,5 @@ hr,
 @import '_partial/search';
 @import '_partial/reward';
 @import '_partial/lightbox';
+@import '_partial/carbonad';
 @import '_duoshuo/embed';
