--- a/themes/indigo/source/css/style.less
+++ b/themes/indigo/source/css/style.less
@@ -409,4 +409,5 @@ hr,
 @import '_partial/reward';
 @import '_partial/lightbox';
 @import '_partial/carbonad';
+@import "_partial/valine";
 @import '_duoshuo/embed';
