--- a/themes/indigo/source/css/_partial/variable.less
+++ b/themes/indigo/source/css/_partial/variable.less
@@ -17,6 +17,13 @@
 @borderColor: #dadada;
 @backColor: #f6f6f6;
 @codeBg: #f5f5f5;
+// tags color
+@tag-color-1: #8bc34a;
+@tag-color-2: #673ab7;
+@tag-color-3: #ff9800;
+@tag-color-4: #f44336;
+@tag-color-5: #00abc0;
+@tag-color-6: #2196f3;
 //layout
 @menuWidth: 240px;
 @menuPadding: 20px;
